--- a/source/about/index.html
+++ b/source/about/index.html
@@ -1,6 +1,7 @@
 ---
 title: 
 date: 2022-11-10 22:19:19
+typora-root-url: ../
 type: "about"
 ---
 
@@ -152,7 +153,7 @@ type: "about"
 	<div class="container">
 		<div class="main">
 			<div class="content">
-				<img src="/blog-notes/assets/images/avatar.jpg" alt="">
+				<img src="/blog-notes/images/avatar.jpg" alt="aaa">
 				<div class="content_r clearfix">
 					<div class="content_l clearfix">
 						<h2>Hi~ I'm Qibria, Welcome here !</h2>
