--- a/source/home/index.html
+++ b/source/home/index.html
@@ -103,9 +103,9 @@ permalink: index.html
 				</dl>
 				<br/>
 				<p>if you know me:</p>
-				<p class="return">return <a href="/blog-notes/archives/">文章列表</a></p>
+				<p class="return">return <a href="/archives/">文章列表</a></p>
 				<p>else:</p>
-				<p class="return">return <a href="/blog-notes/about/">关于我</a></p>
+				<p class="return">return <a href="/about/">关于我</a></p>
 				<hr/>
 			</div>
 	  </div>
