--- a/source/about/index.html
+++ b/source/about/index.html
@@ -153,7 +153,7 @@ type: "about"
 	<div class="container">
 		<div class="main">
 			<div class="content">
-				<img src="/blog-notes/images/avatar.jpg" alt="aaa">
+				<img src="../images/avatar.jpg" alt="aaa">
 				<div class="content_r clearfix">
 					<div class="content_l clearfix">
 						<h2>Hi~ I'm Qibria, Welcome here !</h2>
