--- a/source/about/index.html
+++ b/source/about/index.html
@@ -11,7 +11,7 @@ type: "about"
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>About Me</title>	
-	<style>
+	<style scoped>
 		/* CSS Document */
 		* {
 			margin: 0;
@@ -44,7 +44,7 @@ type: "about"
 			/* margin: 100px auto 0 auto; */
 
 			margin: 0 auto;
-			width: 100%;
+			/* width: 100%; */
 			border-radius: 10px;
 			/* background-color: rgba(236, 236, 236, 0.59); */
 			/* transition: all 1.0s; */
@@ -71,7 +71,7 @@ type: "about"
 			width: 500px;
 			margin: 80px 60px 0 0; */
 			/*	background-color: pink;*/
-			width: 100%;
+			/* width: 100%; */
 			margin: 0 auto;
 			text-align: center;
 		}
@@ -82,7 +82,7 @@ type: "about"
 			width: 100%;
 			text-align: center; */
 
-			width: 100%;
+			/* width: 100%; */
 			margin: 0 auto;
 			text-align: center;
 		}
@@ -151,9 +151,9 @@ type: "about"
 
 <body>
 	<div class="container">
-		<div class="main">
+		<div class="main-content">
 			<div class="content">
-				<img src="../images/avatar.jpg" alt="aaa">
+				<img src="../images/avatar.jpg" alt="">
 				<div class="content_r clearfix">
 					<div class="content_l clearfix">
 						<h2>Hi~ I'm Qibria, Welcome here !</h2>
