--- a/source/home/index.html
+++ b/source/home/index.html
@@ -11,7 +11,7 @@ permalink: index.html
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>About Me</title>	
-	<style>
+	<style scoped>
 		/* CSS Document */
 		* {
 			margin: 0;
@@ -93,7 +93,7 @@ permalink: index.html
 
 <body>
 	<div class="container">
-		<div class="main">
+		<div class="main-content">
 			<div class="content">
 				<dl>
 					<dt>人会长大三次。</dt>
